--- a/packages/ui/src/5-elements/form/_label.scss
+++ b/packages/ui/src/5-elements/form/_label.scss
@@ -7,6 +7,7 @@
   cursor: pointer;
   line-height: 1.5;
   margin-bottom: pxToRem(4);
+  font-size: var(--font-size-0);
   &:where(.is-required)::after { content:"*"; color:hsl(var(--color-danger-100)); }
   .theme-dark & {
     --p-label-text-color: var(--color-neutral-0);
